# filter_design_codex

./: LICENSE  README.md  pyproject.toml
docs/: architecture.md  roadmap.md
src/filter_design/: __init__.py  cli.py  formatting.py  workflow.py
src/filter_design/analysis/: metrics.py  response.py
src/filter_design/domain/: active_rc.py  leapfrog.py  network.py  project.py  specifications.py
src/filter_design/exporters/: csv_export.py  report.py  spice.py  touchstone.py
src/filter_design/realization/: __init__.py  fully_differential.py  leapfrog.py
src/filter_design/synthesis/: __init__.py  order.py  prototypes.py  service.py  transformations.py
src/filter_design/ui/: active_rc_model.py  active_rc_tab.py  active_rc_view.py  app.py  component_model.py  leapfrog_model.py  leapfrog_tab.py  leapfrog_view.py  main_window.py  response_plot.py  schematic_view.py  specification_panel.py  theme.py  worker.py
tests/: test_active_rc.py  test_analysis.py  test_exporters.py  test_leapfrog.py  test_qt_ui.py  test_specifications.py  test_synthesis.py
