[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-filter-designer"
version = "0.2.0"
description = "Independent lumped LC filter synthesis and analysis application"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Open Filter Designer contributors"}]
keywords = ["filter", "RF", "LC", "synthesis", "S-parameters"]
dependencies = ["PySide6>=6.8,<7"]

[project.scripts]
filter-design = "filter_design.cli:main"
filter-design-gui = "filter_design.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
